Bug 1682285 - Part 1: Split internal and external load flags, r=kmag,necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D103364