docshell/base/nsDocShellLoadState.h
@@ -213,6 +213,16 @@ class nsDocShellLoadState final {
 
   bool HasLoadFlags(uint32_t aFlag);
 
+  uint32_t InternalLoadFlags() const;
+
+  void SetInternalLoadFlags(uint32_t aFlags);
+
+  void SetInternalLoadFlag(uint32_t aFlag);
+
+  void UnsetInternalLoadFlag(uint32_t aFlag);
+
+  bool HasInternalLoadFlags(uint32_t aFlag);
+
   bool FirstParty() const;
 
   void SetFirstParty(bool aFirstParty);
@@ -433,6 +443,9 @@ class nsDocShellLoadState final {
 
   // Set of Load Flags, taken from nsDocShellLoadTypes.h and nsIWebNavigation
   uint32_t mLoadFlags;
+
+  // Set of internal load flags
+  uint32_t mInternalLoadFlags;
 
   // Is this a First Party Load?
   bool mFirstParty;
